[package]
name = "sonichub-launcher"
version = "0.2.0"
edition = "2021"
description = "All-in-one Sonic game launcher with GameBanana mod browser"
authors = ["Skayt"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
zip = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
